--- a/src/pages/LoanSection/ApplyPage/ApplyPage.scss
+++ b/src/pages/LoanSection/ApplyPage/ApplyPage.scss
@@ -18,11 +18,11 @@
   }
 
   .bottom-btn-wrapper {
-    margin-top: 185px;
+    // margin-top: 185px;
     display: flex;
     justify-content: space-around;
     position: absolute;
-    //bottom: 20px;
+    bottom: 0;
     width: 100%;
     left: 0;
     right: 0;
