--- a/src/pages/Agent/Agent.scss
+++ b/src/pages/Agent/Agent.scss
@@ -18,15 +18,15 @@
   }
 
   .agent-proceed-button {
-    float: inline;
     display: flex;
-    margin-top: 49px;
-    .clear-button-for-agent {
-      width: 70%;
-    }
-    .procced-button-for-agent {
-      margin-left: 10%;
-      width: 70%;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    right: 0;
+    ion-button {
+      width: 120px;
     }
   }
 }
