--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -45,7 +45,7 @@
       position: absolute;
       bottom: 0px;
       //height: 355px;
-      height: 340px;
+      height: 300px;
       padding-top: 0px;
       transition: height 0.25s ease-in;
       width: 100%;
@@ -91,6 +91,7 @@
         align-items: center;
         margin-top: -15px;
         width: 100%;
+        position: relative;
         ion-button {
           width: 100px;
           height: 20px;
