--- a/src/components/Menu/SideMenu.scss
+++ b/src/components/Menu/SideMenu.scss
@@ -128,6 +128,12 @@ ion-menu {
     button:focus {
       outline: 0;
     }
+
+    a {
+      text-decoration: none;
+      color: #000000;
+      background-color: transparent;
+    }
   }
   .bottom-wrapper {
     padding-bottom: 10px;
