--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -32,8 +32,8 @@
     ion-slides {
       --bullet-background-active: #ffff;
       ion-card {
-        width: 305px;
-        height: 126px;
+        width: 100%;
+        height: 220px;
         color: #ffff;
         border-radius: 15px;
         ion-card-content {
