--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,4 +33,15 @@
     /* padding: 5px; */
     z-index: 100;
   }
+  .notification-count-badge {
+    position: absolute;
+    right: -8px;
+    font-size: 13px;
+    font-weight: 600;
+    border-radius: 10px;
+    margin-top: -12px;
+    background-color: #d90d26;
+    /* padding: 5px; */
+    z-index: 100;
+  }
 }
