notification chnages,my cart,desired loaction changes

--- a/src/pages/Cart/CartPage.scss
+++ b/src/pages/Cart/CartPage.scss
@@ -43,7 +43,7 @@
         line-height: 17px;
         color: #000000;
         position: absolute;
-        bottom: 12px;
+        bottom: 33px; //12px;
       }
     }
     .button-wrapper {
