--- a/src/pages/Agent/Agent.scss
+++ b/src/pages/Agent/Agent.scss
@@ -21,7 +21,8 @@
     display: flex;
     justify-content: space-around;
     position: absolute;
-    bottom: 0;
+    // bottom: 0;
+    margin-top: 35px;
     width: 100%;
     left: 0;
     right: 0;
