--- a/src/pages/Bank/Bank.scss
+++ b/src/pages/Bank/Bank.scss
@@ -23,13 +23,13 @@
     display: flex;
     justify-content: space-around;
     position: absolute;
-    bottom: 0;
+    //bottom: 0;
     width: 100%;
     left: 0;
     right: 0;
+    margin-top: 120px;
     ion-button {
       width: 120px;
     }
   }
 }
-
