--- a/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
+++ b/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
@@ -34,7 +34,17 @@
       font-size: 10px;
       font-weight: 300;
       margin-top: 10px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
+    .storage-discription-expand {
+      display: flex;
+      font-size: 10px;
+      font-weight: 300;
+      margin-top: 10px;
+    }
+
     .storage-details-wrapper {
       display: flex;
       justify-content: center;
