--- a/src/pages/Utilitys/UtilityInsuranceFinanceEmi/RoyalitySavingCredit/RoyalitySavingCredit.scss
+++ b/src/pages/Utilitys/UtilityInsuranceFinanceEmi/RoyalitySavingCredit/RoyalitySavingCredit.scss
@@ -22,10 +22,11 @@
       display: flex;
       justify-content: space-around;
       position: absolute;
-      bottom: 0;
+      // bottom: 0;
       width: 100%;
       left: 0;
       right: 0;
+      margin-top: 30px;
       ion-button {
         width: 120px;
       }
