--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -89,7 +89,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: -15px;
+        //margin-top: -15px;
+        margin-top: 0px;
         width: 100%;
         position: relative;
         ion-button {
