shoping cart image changes

--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -109,7 +109,7 @@
         text-align: center;
         white-space: nowrap;
         overflow: hidden;
-        width:140px;
+        //width:140px;
       }
       .device-price-label {
         font-style: normal;
