--- a/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
+++ b/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
@@ -79,7 +79,6 @@
         line-height: 1;
         text-transform: none;
         cursor: pointer;
-        /* font-size: 12px; */
         font-weight: 500;
         font-size: 10px;
         line-height: 12px;
@@ -117,8 +116,7 @@
     .price-details-wrapper {
       display: flex;
       justify-content: space-between;
-      //margin-top: 12px;
-      margin-top: 20px;
+      margin-top: 30px;
     }
     .add-to-cart-button-wrapper {
       position: fixed;
@@ -128,7 +126,6 @@
       padding: 0px 30px;
       .add-cart-button {
         margin-top: -15px;
-        // margin-top: 0px;
         border-radius: 8px;
         --background: #004777;
         height: 31px;
@@ -143,7 +140,7 @@
     height: 100%;
   }
   .features-wapper {
-    margin-top: 15px;
+    margin-top: 30px;
   }
   .features-label {
     font-weight: 600;
@@ -155,6 +152,16 @@
     font-weight: 500;
     font-size: 10px;
     line-height: 12px;
+    color: #000000;
+    position: absolute;
+    width: 349px;
+    left: 20px;
+    // top: 240px;
+    padding-right: 8px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
     color: #000000;
   }
   .item-name-label {
