--- a/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
+++ b/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
@@ -2,7 +2,7 @@
   .services-options-wrapper {
     position: absolute;
     bottom: 0px;
-    height: 265px;
+    height: 250px;
     transition: height 0.25s ease-in;
     width: 100%;
     max-height: 600px;
@@ -33,7 +33,7 @@
       display: flex;
       font-size: 13px;
       font-weight: 300;
-      margin-top: 25px;
+      margin-top: 15px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -116,7 +116,7 @@
     .price-details-wrapper {
       display: flex;
       justify-content: space-between;
-      margin-top: 30px;
+      // margin-top: 30px;
     }
     .add-to-cart-button-wrapper {
       position: fixed;
@@ -154,14 +154,13 @@
     line-height: 12px;
     color: #000000;
     position: absolute;
-    width: 349px;
+    width: 350px;
     left: 20px;
-    // top: 240px;
     padding-right: 8px;
     font-style: normal;
     font-weight: 400;
     font-size: 13px;
-    line-height: 16px;
+    line-height: 20px;
     color: #000000;
   }
   .item-name-label {
@@ -169,5 +168,14 @@
     font-size: 16px;
     line-height: 20px;
     color: #000000;
+  }
+
+  .slider-img-swipper{
+    font-size: 2px;
+
+    .swiper-pagination-bullet-active {
+      opacity: 0; 
+      /* background: #007aff; */
+    }
   }
 }
