--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -120,6 +120,15 @@
         color: #000000;
         text-align: center;
         margin-top: 10px;
+        display: flex;
+        justify-content: space-around;
+        padding: 0px 15px 0px 12px;
+        
+        .rupay-img{
+           width:15px;
+           margin-right:2px;
+           margin-top:-2px;
+        }
       }
     }
     button {
