--- a/src/pages/TransactionHistory/TransactionHistory.scss
+++ b/src/pages/TransactionHistory/TransactionHistory.scss
@@ -21,6 +21,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     .card-body-wrapper {
       display: inline-flex;
       font-style: normal;
@@ -28,7 +29,7 @@
       font-size: 12px;
       line-height: 15px;
       color: #000000;
-      border-left: 3px solid red;
+      // border-left: 3px solid red;
       display: block;
       .card-inner-header {
         width: 100%;
@@ -47,7 +48,7 @@
         justify-content: space-between;
 
         padding-left: 5px;
-        padding-top: 5px;
+        padding-top: 8px;
         ion-text {
           font-weight: 500;
           font-size: 12px;
