--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -67,15 +67,10 @@
     }
   }
 
-
-
-
-
-
   .mobile-items-wrapper {
     padding: 20px;
     margin-top: -38px;
-  
+
     .item-wrapper {
       display: flex;
       justify-content: center;
@@ -121,13 +116,12 @@
         text-align: center;
         margin-top: 10px;
         display: flex;
-        justify-content: space-around;
-        padding: 0px 15px 0px 12px;
-        
-        .rupay-img{
-           width:15px;
-           margin-right:2px;
-           margin-top:-2px;
+        justify-content: center;
+
+        .rupay-img {
+          width: 15px;
+          margin-right: 2px;
+          margin-top: -2px;
         }
       }
     }
@@ -140,8 +134,6 @@
       right: 0px;
     }
   }
-
- 
 }
 
 .shopping-heading-text-area {
