--- a/src/pages/TransactionHistory/TransactionHistory.scss
+++ b/src/pages/TransactionHistory/TransactionHistory.scss
@@ -1,6 +1,6 @@
 .transaction-wrapper {
-  margin-top: 50px;
   padding-bottom: 5px;
+  padding-top: 20px;
   .transaction-text-area {
     margin-left: 15px;
     color: #ffffff;
