left-border-color fixed

--- a/src/pages/TransactionHistory/TransactionHistory.scss
+++ b/src/pages/TransactionHistory/TransactionHistory.scss
@@ -29,7 +29,7 @@
       font-size: 12px;
       line-height: 15px;
       color: #000000;
-      // border-left: 3px solid red;
+      border-left: 3px solid red;
       display: block;
       .card-inner-header {
         width: 100%;
