--- a/src/pages/Cart/CartPage.scss
+++ b/src/pages/Cart/CartPage.scss
@@ -30,14 +30,14 @@
 
       .product-name-alignment {
         font-style: normal;
-        font-weight: 500;
+        /* font-weight: 500; */
         font-size: 0px;
-        line-height: 14px;
+        line-height: 22px;
         color: #000000;
-        text-align: center;
+        /* text-align: center; */
         white-space: nowrap;
         overflow: hidden;
-        width: 100px;
+        width: 150px;
     }
       .item-varient {
         font-style: normal;
@@ -51,11 +51,10 @@
       }
       .item-price {
         font-weight: 500;
-        font-size: 14px;
         line-height: 17px;
         color: #000000;
         position: absolute;
-        bottom: 33px; //12px;
+      
       }
     }
     .button-wrapper {
