CSS fixes along with the cart list amount calculation and also shopping page list code changes

--- a/src/components/SegmentButtonComponent/SegmentButtonComponent.scss
+++ b/src/components/SegmentButtonComponent/SegmentButtonComponent.scss
@@ -9,7 +9,7 @@
     --color-checked: #ffffff;
     --border-color: transparent;
     --indicator-box-shadow: none;
-    --indicator-color: #004777;
+    --indicator-color: transparent;
     // --border-radius: 8px;
     --height: 0rem;
     //--indicator-height: 0rem;
