--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -45,7 +45,7 @@
       position: absolute;
       bottom: 0px;
       //height: 355px;
-      height: 300px;
+      height: auto;
       padding-top: 0px;
       transition: height 0.25s ease-in;
       width: 100%;
@@ -101,7 +101,9 @@
       }
     }
     .fullHeight {
-      height: calc(100% - 20px);
+      height: auto;
+      overflow: scroll;
+      max-height: 78vh;
       transition: height 0.25s ease-in;
     }
   }
